force-app/main/default/objects/Target_Plan__c/Target_Plan__c.object-meta.xml
<CustomObject>
    <label>Target Plan</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>