force-app/main/default/objects/Target_Plan__c/fields/Baseline_Scope_1__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Scope_1__c</fullName>
    <label>Baseline Scope 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>