force-app/main/default/objects/Target_Plan__c/fields/Baseline_Scope_2_Location_Based__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Scope_2_Location_Based__c</fullName>
    <label>Baseline Scope 2 Location-Based</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>