force-app/main/default/objects/Target_Plan__c/fields/Baseline_Scope_3__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Scope_3__c</fullName>
    <label>Baseline Scope 3</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>