force-app/main/default/objects/Target_Plan__c/fields/Boundary__c.field-meta.xml
<CustomField>
    <fullName>Boundary__c</fullName>
    <label>Boundary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>