force-app/main/default/objects/Target_Plan__c/fields/of_Baseline_Footprints__c.field-meta.xml
<CustomField>
    <fullName>of_Baseline_Footprints__c</fullName>
    <label># of Baseline Footprints</label>
    <summaryForeignKey>Target_Plan_Baseline_Footprint__c.Target_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>