force-app/main/default/objects/Target_Plan__c/fields/Target_Base_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Base_Year__c</fullName>
    <label>Target Base Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>