force-app/main/default/objects/Target_Plan__c/fields/Target_Commitment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Commitment_Start_Date__c</fullName>
    <label>Target Commitment Start Date</label>
    <type>Date</type>
</CustomField>