force-app/main/default/objects/Target_Plan__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absolute</fullName>
            </value>
            <value>
                <fullName>Intensity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>