force-app/main/default/objects/Target_Plan__c/fields/Total_Baseline_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Baseline_Emissions__c</fullName>
    <formula>Baseline_Scope_1__c + Baseline_Scope_2_Location_Based__c + Baseline_Scope_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Baseline Emissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>